<resources>
    <string name="empty_string" />
    <string name="app_name">MoCalendar</string>
    <string name="event_icon">Event Icon</string>
    <string name="event_type">Event Type</string>
    <string name="event_name">Event or assignment name</string>
    <string name="description_name">The description of the event of assignment</string>
    <string name="at_text">at</string>
    <string name="till_text">till</string>
    <string name="new_event">new</string>
    <string name="save_event">save</string>
    <string name="delete_event">delete</string>
    <string name="empty_name_error">Event name cannot be empty!</string>
    <!-- Event Types -->
    <string name="event">Event</string>
    <string name="assignment">Assignment</string>
    <string name="school">Class</string>
    <string name="science">Lab</string>
    <string name="quiz">Exam</string>
    <string name="essay">Essay</string>
    <string name="code">Programming Assignment</string>
    <string name="book">Reading Assignment</string>
    <string name="groups">Club</string>
    <string name="meeting_room">Office Hours</string>
    <string name="sports_soccer">Athletic Practice</string>
    <string name="music_note">Music Practice</string>
    <string name="trophy">Competition</string>
    <string name="present">Presentation</string>
    <string name="holiday">Holiday</string>
</resources>