<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/event_icon"
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:contentDescription="@string/event_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/assignment"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/event_name"
        android:layout_width="363dp"
        android:layout_height="54dp"
        android:autofillHints=""
        android:gravity="center_vertical"
        android:hint="@string/event_name"
        android:inputType="textLongMessage"
        android:textColorHint="#78909C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/event_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/empty_string"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_icon" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/description_name"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/at_text"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="58dp"
        android:layout_height="21dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/at"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

    <TextView
        android:id="@+id/till"
        android:layout_width="22dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/till_text"
        app:layout_constraintStart_toEndOf="@+id/start_time"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/empty_string"
        app:layout_constraintStart_toEndOf="@+id/till"
        app:layout_constraintTop_toBottomOf="@+id/event_name" />

</androidx.constraintlayout.widget.ConstraintLayout>